--- a/pages/about.html
+++ b/pages/about.html
@@ -1,3 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Some Page Title</title>
+    <base href="/ICVL/">
+    <link rel="stylesheet" href="css/all.css">
+
+    <div id="css-placeholder"></div>
+</head>
+<body>
+    <div id="header-placeholder"></div>
+    <div class="main-container">
+        <main id="content">
 <h1>About</h1>
 <section class="content">
     <div class="description">
@@ -25,3 +40,9 @@
         <p>Campus map and additional directions can be found on the <a href="http://www.cs.bgu.ac.il/information/directions.html">department web site</a> or the <a href="http://in.bgu.ac.il/en/Pages/maps.aspx">BGU web site</a>.</p>
     </div>
 </section>
+       </main>
+    </div>
+    <div id="footer-placeholder"></div>
+    <script src="/js/loadContent.js"></script>
+</body>
+</html>
