--- a/pages/template.html
+++ b/pages/template.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Some Page Title</title>
+    <base href="/ICVL/">
+    <link rel="stylesheet" href="css/all.css">
+
     <div id="css-placeholder"></div>
 </head>
 <body>
     <div id="header-placeholder"></div>
-
-    <main>
+    <div class="main-container">
+        <main id="content">
         <!-- PAGE CONTENT -->
-    </main>
-
+        </main>
+    </div>
     <div id="footer-placeholder"></div>
     <script src="/js/loadContent.js"></script>
 </body>
