--- a/pages/header.html
+++ b/pages/header.html
@@ -1,14 +1,14 @@
 <header>
     <div class="logo">
-        <a href="../index.html">
+        <a href="index.html">
             <img src="/assets/logo_icvl.png" alt="ICVL Logo">
         </a>
     </div>
     <div>
         <nav>
             <ul id="nav-list">
-                <li><a href="about.html">About</a></li>
-                <li><a href="members.html">Members</a></li>
+                <li><a href="pages/about.html">About</a></li>
+                <li><a href="pages/members.html">Members</a></li>
                 <li><a href="research.html">Research</a></li>
                 <li><a href="publications.html">Publications</a></li>
                 <li><a href="seminar.html">Seminar</a></li>
