--- a/pages/about.html
+++ b/pages/about.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Some Page Title</title>
+    <title>About ICVL</title>
     <base href="/ICVL/">
     <link rel="stylesheet" href="css/all.css">
-
-    <div id="css-placeholder"></div>
 </head>
 <body>
     <div id="header-placeholder"></div>
