--- a/pages/grad-positions.html
+++ b/pages/grad-positions.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grad Positions</title>
+    <base href="/ICVL/">
+    <link rel="stylesheet" href="css/all.css">
+</head>
+<body>
+<div id="header-placeholder"></div>
+<div class="main-container">
+<main id="content">
 <div class="grad-positions">
 <h1>Graduate student and postdoc positions</h1>
 <p>We always look for excellent graduate students or postdocs to join the lab, (including interns from the Dkalim, Ashalim, and Eitan programs). If any of the vision sciences catches your imagination and research is your passion, please do <a href="mailto:iCVL@cs.bgu.ac.il" role="link">contact us</a> to tell us about yourself and learn more about the lab and its research. Research positions for the 2020/2021 academic year are described in this page. Unless stated differently, most projects offer opportunities at all of the M.Sc., Ph.D., and Postdoc levels.</p>
@@ -43,3 +56,9 @@
 <h3>Computational visual astrophysics</h3>
 <p>Astrophysics, now more than ever, is a scientific field relying heavily on the processing of visual or visual-like information coming in vast volumes from various sensors on earth and in space. In collaboration with data scientists and astrophysicists from the <a href="https://www.njit.edu/" role="link">NJIT</a> and <a href="https://www.nasa.gov/" role="link">NASA</a>, we set to study aspects of the solar system (in particular, <a href="https://www.swpc.noaa.gov/" role="link">space weather</a>) using computational vision and machine learning tools and various research projects are available that relate to finding patterns in solar and space data, forecasting solar eruptions and other space weather events. <strong>For details please contact: <a href="mailto:ben-shahar@cs.bgu.ac.il" role="link" class="contact">Prof. Ohad Ben-Shahar</a></strong></p>
  </div>
+    </main>
+    </div>
+<div id="footer-placeholder"></div>
+<script src="/js/loadContent.js"></script>
+</body>
+</html>
