--- a/pages/header.html
+++ b/pages/header.html
@@ -9,13 +9,13 @@
             <ul id="nav-list">
                 <li><a href="pages/about.html">About</a></li>
                 <li><a href="pages/members.html">Members</a></li>
-                <li><a href="research.html">Research</a></li>
-                <li><a href="publications.html">Publications</a></li>
-                <li><a href="seminar.html">Seminar</a></li>
+                <li><a href="pages/research.html">Research</a></li>
+                <li><a href="pages/publications.html">Publications</a></li>
+                <li><a href="pages/seminar.html">Seminar</a></li>
                 <li><a href="pages/gallery.html">Gallery</a></li>
-                <li><a href="resources.html">Resources</a></li>
-                <li><a href="grad-positions.html">Grad Positions</a></li>
-                <li><a href="senior-projects.html">Senior Projects</a></li>
+                <li><a href="pages/resources.html">Resources</a></li>
+                <li><a href="pages/grad-positions.html">Grad Positions</a></li>
+                <li><a href="pages/senior-projects.html">Senior Projects</a></li>
                 <li>
                     <div class="theme-toggle" id="theme-toggle" onclick="toggleTheme()">
                         <div class="toggle-switch">
