--- a/pages/publications.html
+++ b/pages/publications.html
@@ -5,6 +5,19 @@ this code:
             // }
 in scripts.js until we will have api key to fetch the publications dynamically
 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Publications</title>
+    <base href="/ICVL/">
+    <link rel="stylesheet" href="css/all.css">
+</head>
+<body>
+    <div id="header-placeholder"></div>
+    <div class="main-container">
+        <main id="content">
 <h1>Publications</h1>
 <div id="publications">
                     <div class="publication-year">
@@ -880,7 +893,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
 					Anchorage, Alaska, June 2008.</li><li>A. Shapiro, E. Korkodi, A. Rotenberg, G. Furst, H. Namdar, B. Sapir, M. Mishkin, O. Ben- Shahar, and Y. Edan,
 				    <strong>A robotic protoype for spraying and pollinating date palm trees</strong>,
 					In the <em>Proceedings of the ASME Conference on Engineering Systems Design and Analysis (ESDA)</em>, August, 2008.</li><li>W.M. Harmening, S.Ohayon, E.Rivlin, O. Ben-Shahar, and H. Wagner,
-				    <a href="http://www.perceptionweb.com/abstract.cgi?id=v080042" "="" target="_blank">
+				    <a href="http://www.perceptionweb.com/abstract.cgi?id=v080042" target="_blank">
 					The owl cam: Ego-centered assessment of visual behaviour in free-viewing barn owls
 					</a>,
 					In the <em> Proceedings of the European Conference on Visual Perception (ECVP)</em>,
@@ -1057,3 +1070,10 @@ in scripts.js until we will have api key to fetch the publications dynamically
 					<em>M.Sc. Thesis,
 					</em>Technion, Haifa, Israel, 1996.</li></ul>
                     </div></div>
+
+        </main>
+    </div>
+    <div id="footer-placeholder"></div>
+    <script src="/js/loadContent.js"></script>
+</body>
+</html>
