--- a/pages/researches/Agrovision.html
+++ b/pages/researches/Agrovision.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Agrovision</title>
+    <base href="/ICVL/">
+    <link rel="stylesheet" href="css/all.css">
+</head>
+<body>
+    <div id="header-placeholder"></div>
+    <div class="main-container">
+        <main id="content">
 <section class="research-section">
     <h2>Agrovision</h2>
     <p>Modern agriculture and horticulture are often labor intensive. At the same time, while wages are on the rise, the availability of a skilled workforce that is willing to perform the repetitive tasks in the harsh environmental conditions of a greenhouse, orchard or a field, is decreasing rapidly. Interestingly enough, however, the current state of the art in automated harvesting of fruits and vegetables has remained remarkably stationary in the past decades, in part because of technological barriers that have not been addressed successfully thus far. Contributing to the effort to revolutionize agriculture, our group has been involved in various research projects in agrobotics, focusing on the point where agriculture and computer vision meet. What we term <em>agrovision</em> offers challenges that no other domain in computer vision can offers, with tangible potential to aid society as a whole.</p>
@@ -22,3 +35,9 @@
         <li>A. Shapiro, E. Korkodi, A. Rotenberg, G. Furst, H. Namdar, B. Sapir, M. Mishkin, O. Ben-Shahar, and Y. Edan, <strong>A robotic prototype for spraying and pollinating date palm trees</strong>, In the <em>Proceedings of the ASME Conference on Engineering Systems Design and Analysis (ESDA)</em>, August, 2008.</li>
     </ul>
 </section>
+        </main>
+    </div>
+    <div id="footer-placeholder"></div>
+    <script src="/js/loadContent.js"></script>
+</body>
+</html>
