--- a/pages/researches/Archerfish-Vision.html
+++ b/pages/researches/Archerfish-Vision.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Archer Fish Vision</title>
+    <base href="/ICVL/">
+    <link rel="stylesheet" href="css/all.css">
+</head>
+<body>
+    <div id="header-placeholder"></div>
+    <div class="main-container">
+        <main id="content">
 <section class="research-section">
     <h2>Archerfish Vision</h2>
     <p>The archer fish (Toxotes chatareus) exhibits unique visual behavior in that it is able to aim at and shoot down with a squirt of water insects resting on the foliage above water level and then feed on them. This extreme behavior requires excellent visual acuity, learning, and tight synchronization between the visual system and body motion. Watch a quick introduction about the archerfish in this National Geographic video.</p>
@@ -27,3 +40,9 @@
     <h2>Acknowledgments</h2>
     <p>The various projects and studies made in this context were funded in part by different agencies including the Israel Science Foundation (ISF), grants no. 502/07, 1619/07, 207/11, 1274/11, 211/15, and 281/15, the Center for Complexity Sciences, The Human Frontiers Science Program, and the Rich foundation, and the Psychobiology Institute. We also thank the Frankel fund of the Computer Science department, the Helmsley Charitable Trust through the Agricultural, Biological and Cognitive Robotics Initiative, and the Zlotowski Center for Neuroscience, all at Ben-Gurion University.</p>
 </section>
+        </main>
+    </div>
+    <div id="footer-placeholder"></div>
+    <script src="/js/loadContent.js"></script>
+</body>
+</html>
