--- a/pages/researches/Computational-Polygonal-Puzzle-Solving.html
+++ b/pages/researches/Computational-Polygonal-Puzzle-Solving.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Computational Polygonal Puzzle Solving</title>
+    <base href="/ICVL/">
+    <link rel="stylesheet" href="css/all.css">
+
+</head>
+<body>
+    <div id="header-placeholder"></div>
+    <div class="main-container">
+        <main id="content">
 <h1>Computational Polygonal Puzzle Solving</h1>
 
 <section class="research-section">
@@ -98,3 +112,9 @@
     <h2>Acknowledgments</h2>
     <p>This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No. 964854, the Helmsley Charitable Trust through the ABC Robotics Initiative, and the Frankel Fund of the Computer Science Department at Ben-Gurion University.</p>
 </section>
+        </main>
+    </div>
+    <div id="footer-placeholder"></div>
+    <script src="/js/loadContent.js"></script>
+</body>
+</html>
