--- a/pages/researches/Curve-completion-in-the-tangent-bundle.html
+++ b/pages/researches/Curve-completion-in-the-tangent-bundle.html
@@ -1,4 +1,18 @@
-<section class="research-section">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curve Completion In The Tangent Bundle</title>
+    <base href="/ICVL/">
+    <link rel="stylesheet" href="css/all.css">
+
+</head>
+<body>
+    <div id="header-placeholder"></div>
+    <div class="main-container">
+        <main id="content">
+            <section class="research-section">
     <h2>Curve completion in the tangent bundle</h2>
     <h3>Curve Completion – What is it all about</h3>
     <p>The ease of seeing hides many complexities. A fundamental problem is the one of fragmentation as we are able to perceive objects although they are optically incomplete or fragmented, in particular due to occlusion. A central mechanism that addresses this difficulty in biological and artificial visual systems is contour or <strong>curve completion</strong>, which has been studied in different ways in the different vision sciences. Without denying the role of top down influences, curve completion is known to be much influenced by bottom up, stimulus driven processes, which often override explicit knowledge about the scene or even a lifetime of visual experience. Want to experience of the strength of curve completion? Move the cursor over the field of circles on the right to introduce some occluders and observe how the perception and interpretation of the scene changes drastically, from circles to vertical waves. The same phenomenon can be demonstrated in reversed. No doubt you see a nice cylindrical neck behind the occluder of the ostrich. But you might be surprised when you move your mouse over the image to reveal the true shape. The examples below show some more shape completion examples that conflict the context, and one modal completion where observers report illusory shape.</p>
@@ -67,3 +81,9 @@
     <p>This work was funded in part by the European Commission in the 7th Framework Programme (CROPS GA no. 246252) and the Israel Science Foundation (ISF grant No. 259/12). We also thank the generous support of the Frankel fund, the Paul Ivanier center for Robotics Research and the Zlotowski Center for Neuroscience at Ben-Gurion University of the Negev.</p>
 </section>
 
+        </main>
+    </div>
+    <div id="footer-placeholder"></div>
+    <script src="/js/loadContent.js"></script>
+</body>
+</html>
