--- a/pages/seminar.html
+++ b/pages/seminar.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Some Page Title</title>
+    <base href="/ICVL/">
+    <link rel="stylesheet" href="css/all.css">
+
+</head>
+<body>
+    <div id="header-placeholder"></div>
+    <div class="main-container">
+        <main id="content">
 <h1>Meeting Presentations</h1>
 <section class="content">
     <div class="description">
@@ -7,3 +21,9 @@
     </div>
 </section>
 <div id="meetingsContainer"></div>
+        </main>
+    </div>
+    <div id="footer-placeholder"></div>
+    <script src="/js/loadContent.js"></script>
+</body>
+</html>
