--- a/pages/research.html
+++ b/pages/research.html
@@ -1,45 +1,60 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Researches</title>
+    <base href="/ICVL/">
+    <link rel="stylesheet" href="css/all.css">
+</head>
+<body>
+    <div id="header-placeholder"></div>
+    <div class="main-container">
+        <main id="content">
+
+
 <h1>Research</h1>
 <p>Some (though not all) of our research projects include databases, code, online experimental systems for data collection, or just nice stimuli or demos worth showing. Please visit those projects with online material in the links below but do not forget to visit the lab's publication page for all our other research projects.</p>
 <h2>Active Research</h2>
 <div class="research-grid">
     <div class="research-item">
-        <a href="#" onclick="loadContent('pages/researches/Multi-Phase-Relaxation.html')">
+        <a href="pages/researches/Multi-Phase-Relaxation.html">
             <img src="./assets/research/gifs/multi-phase_rl_for_puzzles_featured_image-1.gif" alt="Multi-Phase Relaxation Labeling for Square Jigsaw Puzzle Solving">
             <p>Multi-Phase Relaxation Labeling for Square Jigsaw Puzzle Solving</p>
         </a>
     </div>
     <div class="research-item">
-        <a href="#" onclick="loadContent('pages/researches/Computational-Polygonal-Puzzle-Solving.html')">
+        <a href="pages/researches/Computational-Polygonal-Puzzle-Solving.html">
             <img src="./assets/research/gifs/apictorial_polygonal_reconstruction3.gif" alt="Computational Polygonal Puzzle Solving">
             <p>Computational Polygonal Puzzle Solving</p>
         </a>
     </div>
     <div class="research-item">
-        <a href="#" onclick="loadContent('pages/researches/Square-Jigsaw-Puzzle-Solving.html')">
+        <a href="pages/researches/Square-Jigsaw-Puzzle-Solving.html">
             <img src="./assets/research/gifs/projects-index-jigsaw-anim.gif" alt="Square Jigsaw Puzzle Solving">
             <p>Square Jigsaw Puzzle Solving</p>
         </a>
     </div>
     <div class="research-item">
-        <a href="#" onclick="loadContent('pages/researches/hyperspectral-imaging.html')">
+        <a href="pages/researches/hyperspectral-imaging.html">
             <img src="./assets/research/gifs/hs-animation1.gif" alt="Hyperspectral Imaging from low cost sensors">
             <p>Hyperspectral Imaging from low cost sensors</p>
         </a>
     </div>
     <div class="research-item">
-                <a href="#" onclick="loadContent('pages/researches/Archerfish-Vision.html')">
+                <a href="pages/researches/Archerfish-Vision.html">
                     <img src="./assets/research/gifs/projects-index-CVwVC-anim.gif" alt="Archerfish Vision">
             <p>Archerfish Vision</p>
         </a>
     </div>
     <div class="research-item">
-            <a href="#" onclick="loadContent('pages/researches/Curve-completion-in-the-tangent-bundle.html')">
+            <a href="pages/researches/Curve-completion-in-the-tangent-bundle.html">
             <img src="./assets/research/gifs/projects-index-CCinTB-anim.gif" alt="Curve completion in the tangent bundle">
             <p>Curve completion in the tangent bundle</p>
         </a>
     </div>
     <div class="research-item">
-            <a href="#" onclick="loadContent('pages/researches/Agrovision.html')">
+            <a href="pages/researches/Agrovision.html">
             <img src="./assets/research/gifs/20150909_135657_online-video-cutter-1.gif" alt="Agrovision">
             <p>Agrovision</p>
         </a>
@@ -97,3 +112,9 @@
         </a>
     </div>
 </div>
+        </main>
+    </div>
+    <div id="footer-placeholder"></div>
+    <script src="/js/loadContent.js"></script>
+</body>
+</html>
