--- a/pages/researches/Multi-Phase-Relaxation.html
+++ b/pages/researches/Multi-Phase-Relaxation.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi-Phase Relaxation Labeling for Square Jigsaw Puzzle Solving</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Assuming your CSS file is named styles.css -->
+    <title>Multi Phase Relaxation</title>
+    <base href="/ICVL/">
+    <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
-
+    <div id="header-placeholder"></div>
+    <div class="main-container">
+        <main id="content">
 <h1>Multi-Phase Relaxation Labeling for Square Jigsaw Puzzle Solving</h1>
 
 <section class="research-section">
@@ -39,6 +42,9 @@
     <h2>Acknowledgments</h2>
     <p>This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 964854, the Helmsley Charitable Trust through the ABC Robotics Initiative, and the Frankel Fund of the Computer Science Department at Ben-Gurion University.</p>
 </section>
-
+        </main>
+    </div>
+    <div id="footer-placeholder"></div>
+    <script src="/js/loadContent.js"></script>
 </body>
 </html>
