--- a/pages/researches/Square-Jigsaw-Puzzle-Solving.html
+++ b/pages/researches/Square-Jigsaw-Puzzle-Solving.html
@@ -1,4 +1,17 @@
-<h1>Square Jigsaw Puzzle Solving</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Square Jigsaw Puzzle Solving</title>
+    <base href="/ICVL/">
+    <link rel="stylesheet" href="css/all.css">
+</head>
+<body>
+    <div id="header-placeholder"></div>
+    <div class="main-container">
+        <main id="content">
+            <h1>Square Jigsaw Puzzle Solving</h1>
 
 <section class="research-section">
     <h2>Introduction</h2>
@@ -102,3 +115,9 @@
     <h2>Acknowledgments</h2>
     <p>This work was funded in part by the US Air Force European Office of Aerospace Research and Development (grant number FA8655-09-1-3016), the Israel Science Foundation (ISF grant No. 1245/08) and the European Commission in the 7th Framework Programme (CROPS GA no 246252). We also thank the generous support of the Frankel fund, the Paul Ivanier center for Robotics Research and the Zlotowski Center for Neuroscience at Ben-Gurion University.</p>
 </section>
+        </main>
+    </div>
+    <div id="footer-placeholder"></div>
+    <script src="/js/loadContent.js"></script>
+</body>
+</html>
