--- a/pages/members.html
+++ b/pages/members.html
@@ -279,7 +279,7 @@
         </div>
     </main>
     <div id="footer-placeholder"></div>
-    <script src="/js/loadContent.js"></script>
+    <script src="/ICVL/js/loadContent.js"></script>
    </div>
 </body>
 </html>
