--- a/pages/publications.html
+++ b/pages/publications.html
@@ -1074,6 +1074,6 @@ in scripts.js until we will have api key to fetch the publications dynamically
         </main>
     </div>
     <div id="footer-placeholder"></div>
-    <script src="/js/loadContent.js"></script>
+    <script src="/ICVL/js/loadContent.js"></script>
 </body>
 </html>
