--- a/pages/researches/Multi-Phase-Relaxation.html
+++ b/pages/researches/Multi-Phase-Relaxation.html
@@ -45,6 +45,6 @@
         </main>
     </div>
     <div id="footer-placeholder"></div>
-    <script src="/js/loadContent.js"></script>
+    <script src="/ICVL/js/loadContent.js"></script>
 </body>
 </html>
