--- a/pages/senior-projects.html
+++ b/pages/senior-projects.html
@@ -85,6 +85,6 @@
                     </main>
     </div>
     <div id="footer-placeholder"></div>
-    <script src="/js/loadContent.js"></script>
+    <script src="/ICVL/js/loadContent.js"></script>
 </body>
 </html>
