--- a/pages/header.html
+++ b/pages/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="logo">
         <a href="index.html">
-            <img src="/assets/logo_icvl.png" alt="ICVL Logo">
+            <img src="/ICVL/assets/logo_icvl.png" alt="ICVL Logo">
         </a>
     </div>
     <div>
