--- a/pages/members.html
+++ b/pages/members.html
@@ -27,56 +27,10 @@
                     </div>
                     <div class="student_box">
                         <div class="student_box_img">
-                            <a href="https://www.cs.bgu.ac.il/~rotemra/" target="_blank">
-                                <img src="./assets/members/students-pic-ben-mairon.jpg" alt="Rotem Mairon member image">
-                            </a>
-                        </div>
-                        <a href="https://www.cs.bgu.ac.il/~rotemra/" target="_blank" class="member-name">Rotem Mairon</a>
-                        <p>Ph.D. Student</p>
-                    </div>
-                    <div class="student_box">
-                        <div class="student_box_img">
-                            <img src="./assets/members/lab_profile-150x150.jpg" alt="Peleg Harel member image">
-                        </div>
-                        <a href="#" class="member-name">Peleg Harel</a>
-                        <p>M.Sc. Student</p>
-                    </div>
-                    <div class="student_box">
-                        <div class="student_box_img">
                             <img src="./assets/members/IMG-20181202-WA00081-150x150.jpg" alt="Keren Berger member image">
                         </div>
                         <a href="#" class="member-name">Keren Berger</a>
                         <p>Ph.D. Student</p>
-                    </div>
-                    <div class="student_box">
-                        <div class="student_box_img">
-                            <img src="./assets/members/ben-e1551164852316-150x150.jpg" alt="Ben Vardi member image">
-                        </div>
-                        <a href="#" class="member-name">Ben Vardi</a>
-                        <p>M.Sc. Student</p>
-                    </div>
-                    <div class="student_box">
-                        <div class="student_box_img">
-                            <a href="https://www.roytoren.com/about" target="_blank">
-                                <img src="./assets/members/20180904_1425471-e1577004790577-150x150.jpg" alt="Roy Toren member image">
-                            </a>
-                        </div>
-                        <a href="https://www.roytoren.com/about" target="_blank" class="member-name">Roy Toren</a>
-                        <p>M.Sc. Student</p>
-                    </div>
-                    <div class="student_box">
-                        <div class="student_box_img">
-                            <img src="./assets/members/ilangit-150x150.jpg" alt="Ilan Git member image">
-                        </div>
-                        <a href="#" class="member-name">Ilan Git</a>
-                        <p>M.Sc. Student</p>
-                    </div>
-                    <div class="student_box">
-                        <div class="student_box_img">
-                            <img src="./assets/members/students-pic-amar.jpg" alt="Elad Amar member image">
-                        </div>
-                        <a href="#" class="member-name">Elad Amar</a>
-                        <p>M.Sc. Student</p>
                     </div>
                     <div class="student_box">
                         <div class="student_box_img">
@@ -97,18 +51,112 @@
                             <img src="./assets/members/Gur_Protrait-150x150.png" alt="Gur Shalev Elkin member image">
                         </div>
                         <a href="#" class="member-name">Gur Shalev Elkin</a>
-                        <p>Eitan program Student</p>
+                        <p>M.Sc. Student</p>
                     </div>
                     <div class="student_box">
                         <div class="student_box_img">
                             <img src="./assets/members/IMG_1732-150x150.jpg" alt="Ofir Shahar member image">
                         </div>
                         <a href="#" class="member-name">Ofir Shahar</a>
-                        <p>Eitan program Student</p>
+                        <p>M.Sc. Student</p>
+                    </div>
+                    <div class="student_box">
+                        <div class="student_box_img">
+                            <img src="./assets/members/alexlazarovich.png" alt="Alex Lazarovich member image">
+                        </div>
+                        <a href="#" class="member-name">Alex Lazrovich</a>
+                        <p>M.Sc. Student</p>
+                    </div>
+                    <div class="student_box">
+                        <div class="student_box_img">
+                            <img src="./assets/members/brahanwassan.png" alt="Brahan Wassan member image">
+                        </div>
+                        <a href="#" class="member-name">Brahan Wassan</a>
+                        <p>M.Sc. Student</p>
+                    </div>
+                    <div class="student_box">
+                        <div class="student_box_img">
+                            <img src="./assets/members/danzlotnikov.png" alt="Dan Zlotnikov member image">
+                        </div>
+                        <a href="#" class="member-name">Dan Zlotnikov</a>
+                        <p>M.Sc. Student</p>
+                    </div>
+                    <div class="student_box">
+                        <div class="student_box_img">
+                            <img src="./assets/members/talalfi.png" alt="Tal Alfi member image">
+                        </div>
+                        <a href="#" class="member-name">Tal Alfi</a>
+                        <p>M.Sc. Student</p>
+                    </div>
+                    <div class="student_box">
+                        <div class="student_box_img">
+                            <img src="./assets/members/nadavalali.png" alt="Nadav Alali member image">
+                        </div>
+                        <a href="#" class="member-name">Nadav Alali</a>
+                        <p>M.Sc. Student</p>
                     </div>
                 </div>
                 <h2>Alumni</h2>
                 <div class="member_grid">
+                    <div class="student_box_alumni">
+                        <div class="student_box_img">
+                            <img src="./assets/members/students-pic-amar.jpg" alt="Elad Amar member image">
+                        </div>
+                        <a href="https://www.linkedin.com/in/elad-amar/" target="_blank" class="member-name">Elad Amar</a>
+                        <p>M.Sc. (2023)</p>
+                        <p><b>Research Topic: </b> </p>
+                        <p><b>Currently:</b> </p>
+                    </div>
+                    <div class="student_box_alumni">
+                        <div class="student_box_img">
+                            <img src="./assets/members/ilangit-150x150.jpg" alt="Ilan Git member image">
+                        </div>
+                        <a href="" target="_blank" class="member-name">Ilan Git</a>
+                        <p>M.Sc. (2022)</p>
+                        <p><b>Research Topic: </b> </p>
+                        <p><b>Currently:</b> </p>
+                    </div>
+                    <div class="student_box_alumni">
+                        <div class="student_box_img">
+                            <a href="https://www.cs.bgu.ac.il/~rotemra/" target="_blank">
+                                <img src="./assets/members/students-pic-ben-mairon.jpg" alt="Rotem Mairon member image">
+                            </a>
+                        </div>
+                        <a href="https://www.cs.bgu.ac.il/~rotemra/" target="_blank" class="member-name">Rotem Mairon</a>
+                        
+                        <p>Ph.D (2021)</p>
+                        <p><b>Research Topic: </b> </p>
+                        <p><b>Currently:</b> </p>
+                    </div>
+                    <div class="student_box_alumni">
+                        <div class="student_box_img">
+                            <img src="./assets/members/lab_profile-150x150.jpg" alt="Peleg Harel member image">
+                        </div>
+                        <a href="#" class="member-name">Peleg Harel</a>
+                        <p>M.Sc. (2020)</p>
+                        <p><b>Research Topic: </b> </p>
+                        <p><b>Currently:</b> </p>
+                    </div>
+                    <div class="student_box_alumni">
+                        <div class="student_box_img">
+                            <img src="./assets/members/ben-e1551164852316-150x150.jpg" alt="Ben Vardi member image">
+                        </div>
+                        <a href="#" class="member-name">Ben Vardi</a>
+                        <p>M.Sc. (2020)</p>
+                        <p><b>Research Topic: </b> </p>
+                        <p><b>Currently:</b> </p>
+                    </div>
+                    <div class="student_box_alumni">
+                        <div class="student_box_img">
+                            <a href="https://www.roytoren.com/about" target="_blank">
+                                <img src="./assets/members/20180904_1425471-e1577004790577-150x150.jpg" alt="Roy Toren member image">
+                            </a>
+                        </div>
+                        <a href="https://www.roytoren.com/about" target="_blank" class="member-name">Roy Toren</a>
+                        <p>M.Sc. (2022)</p>
+                        <p><b>Research Topic: </b> </p>
+                        <p><b>Currently:</b> </p>
+                    </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
                             <a href="http://www.boazarad.com/" target="_blank">
